# weed-detection

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: FINE_TUNING_GUIDE.md  HANDOFF.md  LESSONS_LEARNED.md  WORKFLOW.md
notebooks/: rf_detr_weed_training.ipynb
scripts/: test_detection.py
src/: __init__.py  config.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/routes/: __init__.py  detection.py  detection_prompts_backup_jan21.py  references.py  ui.py
src/detection/: __init__.py  detector.py  dynamic_dino.py  grounding_dino.py  grounding_dino_1_5_edge.py  grounding_dino_1_5_pro.py  grounding_dino_local.py  models.py  rf_detr.py  sam_detector.py  tensorrt_utils.py
src/references/: __init__.py  manager.py
src/visualization/: __init__.py  annotate.py
